clang/test/BSC/Trait/r1/define_trait_var1.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

trait F {}G; // expected-error {{only trait pointer type are allowed to be declared}}